    - Add svtplay-dl extension. Project page is at: https://github.com/spaam/svtplay-dl
    - Add you-get extension. Project page is at: https://github.com/soimort/you-get
    - Add Italian translations.

  Version 2.5.0(August 1st, 2022)
    [Windows]
    - Bundle python 3.8.10.
    - Replace bundled 7zip with bsdtar.
    [All]
    - Add Swedish language.
    - Update other langauge translations.
    - Add a button in the configure tab to make it easy to reach a folder where binaries are located.
    - Automatically download and manage folder based you-get executable.

  Version 2.6.0(October 1st, 2022)
    [Windows]
    - Bundle wget 1.21.3.
    [All]
    - Add GUI options in playlist downloader tab to enable/disable internal archive file and to clear it.
    - Fix a bug that prevented downloading of urls from a file if the file use "\r\n" as line separator.
    - Add ability to have multiple profiles for downloading options.

  Version 2.7.0(Novermber 10th, 2022)
    [All]
    - Add German translations.
    - Add a GUI option to check for Media Downloader update on startup.
    - Add a GUI option to download a section of a media in batch downloader tab.
    - Update other langauge translations.

  Version 2.8.0(January 3rd,2023)
    [All]
    - Download all missing executables on startup if they are not present for some reason.
    - Also check updates for extensions when "check for updates" option is set. This option previously checked
      for Media Downloader updates only,
    - Check for extensions update and automatically download them if newer version are found when both
      "Show Version Info When Starting" and "check for updates" options are set.
    - Cancelling a download now also terminates ffmpeg or aria2c if they were started by the download.

  Version 2.9.0(Unreleased)
    - Add Portuguese(Brazilian) translations.
    - Make entry table in the playlist tab larger after it is populated.
    - Required minimum version of yt-dlp is 2023.01.06.